--- a/static/global.css
+++ b/static/global.css
@@ -4,15 +4,24 @@
 }
 
 @font-face {
-    font-family: "calibril";
-    src: local("calibril"),
-    url("/fonts/calibril.ttf") format("TrueType");
+    font-family: 'latoregular';
+    src: url('/fonts/lato-regular-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: "lusitana";
-    src: local("lusitana"),
-    url("/fonts/Lusitana-Regular.ttf") format("TrueType");
+    font-family: 'playfairregular';
+    src: url('/fonts/playfairdisplay-variablefont_wght-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotoregular';
+    src: url('/fonts/roboto-regular-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
 
 a {
@@ -32,4 +41,18 @@ button {
 
 ul {
     list-style: none;
+}
+
+.flex-row-center {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-column-center {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
 }
